[gd_scene load_steps=9 format=3 uid="uid://dchsrfq2i6g7u"]

[ext_resource type="Texture2D" uid="uid://hp0lw5rlj5ue" path="res://Assets/textures/bg.png" id="1_632rm"]
[ext_resource type="Script" path="res://Scripts/game.gd" id="1_m8x34"]
[ext_resource type="PackedScene" uid="uid://drsow5c5qqgmo" path="res://Scenes/player.tscn" id="2_jewce"]
[ext_resource type="PackedScene" uid="uid://c40y61p55vxxa" path="res://Scenes/enemy_spawner.tscn" id="4_36cj2"]
[ext_resource type="PackedScene" uid="uid://bl160h1g5stdj" path="res://Scenes/hud.tscn" id="6_8bf7d"]
[ext_resource type="AudioStream" uid="uid://c4ttexf74aw1f" path="res://Assets/audio/hit.wav" id="6_a0gfc"]
[ext_resource type="AudioStream" uid="uid://bm2tla2bl8hyf" path="res://Assets/audio/explode.wav" id="7_dgdac"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5kg1p"]
size = Vector2(62, 855)

[node name="Game" type="Node2D"]
script = ExtResource("1_m8x34")

[node name="TextureRect" type="TextureRect" parent="."]
texture_filter = 1
texture_repeat = 2
offset_right = 1280.0
offset_bottom = 720.0
texture = ExtResource("1_632rm")
stretch_mode = 1

[node name="Player" parent="." instance=ExtResource("2_jewce")]
position = Vector2(80, 360)

[node name="EnemySpawner" parent="." instance=ExtResource("4_36cj2")]

[node name="DeathZone" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DeathZone"]
position = Vector2(-148, 337.5)
shape = SubResource("RectangleShape2D_5kg1p")

[node name="UI" type="CanvasLayer" parent="."]

[node name="HUD" parent="UI" instance=ExtResource("6_8bf7d")]

[node name="EnemyHitSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_a0gfc")

[node name="TakeDamageSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_dgdac")

[connection signal="took_damage" from="Player" to="." method="_on_player_took_damage"]
[connection signal="enemy_spawned" from="EnemySpawner" to="." method="_on_enemy_spawner_enemy_spawned"]
[connection signal="path_enemy_spawned" from="EnemySpawner" to="." method="_on_enemy_spawner_path_enemy_spawned"]
[connection signal="area_entered" from="DeathZone" to="." method="_on_death_zone_area_entered"]
